--- a/src/flow-chart-styles.css
+++ b/src/flow-chart-styles.css
@@ -13,7 +13,8 @@
     border-radius: 10px;
     padding: 15px 25px;
     color: #ffffff;
-    width: 280px;
+    width: 100%;
+    height: 100%;
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.6);
     border: 1px solid #333;
     font-family: 'Roboto', sans-serif;
@@ -21,6 +22,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    box-sizing: border-box;
   }
   
   .editable-node:hover {
@@ -195,4 +197,18 @@
   
   .thumb-vertical:hover {
     background-color: #777;
+  }
+
+  /* NodeResizer styles */
+.react-flow__node-editable {
+    width: 280px;
+    height: auto;
+  }
+  
+  .react-flow__node-editable .react-flow__resize-control {
+    background-color: #ff4757;
+  }
+  
+  .react-flow__node-editable .react-flow__resize-control.line {
+    background-color: #ff4757;
   }
