--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,33 @@ html, body, #root {
   overflow: hidden;
 }
 
+
 .App {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
 }
 
+.app-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.App {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
